<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cash"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:fontFamily="@font/exo_black"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:text="@string/header"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingRight="62dp"
            android:text="@string/amount"
            android:textColor="#2154AF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/amountEditInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_semibold"
            android:gravity="start"
            android:hint="@string/amountInput"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingRight="30dp"
            android:textColor="#880E4F"
            android:textColorHint="#9CB52973" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/paxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingRight="10dp"
            android:text="@string/pax"
            android:textColor="#2154AF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/paxEditInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_semibold"
            android:gravity="start"
            android:hint="@string/paxInput"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#880E4F"
            android:textColorHint="#9CB52973" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/discountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingRight="26dp"
            android:text="@string/discount"
            android:textColor="#2154AF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/discountEditInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_semibold"
            android:gravity="start"
            android:hint="@string/discountInput"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#880E4F"
            android:textColorHint="#9CB52973" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/paymentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingRight="9dp"
            android:text="@string/paymentMode"
            android:textColor="#2154AF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:paddingRight="40dp"
            android:text="@string/cash"
            android:textColor="#880E4F" />

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:text="@string/payNow"
            android:textColor="#880E4F" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/svsgst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingRight="56dp"
            android:text="@string/svsgst"
            android:textColor="#2154AF"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:fontFamily="@font/exo_semibold"
            android:text="ToggleButton"
            android:textColor="#880E4F"
            android:textOff="NO SVS"
            android:textOn="HAVE SVS" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:fontFamily="@font/exo_semibold"
            android:text="ToggleButton"
            android:textColor="#880E4F"
            android:textOff="NO GST"
            android:textOn="HAVE GST" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_medium"
            android:text="@string/split"
            app:backgroundTint="#591E32" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_medium"
            android:text="@string/reset"
            app:backgroundTint="#591E32" />

    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EBD96B9"
        android:fontFamily="@font/exo_extrabold"
        android:gravity="center"
        android:textColor="#F40707"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5EBD96B9"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalBill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:fontFamily="@font/exo_2_bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/totalBillAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:fontFamily="@font/exo_semibold"
                android:gravity="end"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/eachPays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:fontFamily="@font/exo_2_bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/eachPaysAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:fontFamily="@font/exo_2_semibold"
                android:gravity="end"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>